# mcadmin

./: .dockerignore  .env.dev  .gitignore  Dockerfile.py  Dockerfile.tw  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
mcadmin/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
todo/: models.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: home.html
user/: admin.py  forms.py  minecraft.py  models.py  payment_views.py  player_views.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_player_email_alter_player_uuid.py  0003_player_joined.py  0004_alter_payment_date.py  0005_alter_payment_date.py
user/templates/: _base.html  index.html  login.html  save_payment.html  save_player.html  signup.html
